Overflow minor fix

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ body{
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 
   display: flex;
   justify-content: center;
